# flang

./: CMakeLists.txt  README.md
include/: universal.h
runtime/: CMakeLists.txt
runtime/flang/: CMakeLists.txt  directives.h  ftncharsup.c  ftni64.h  ftnncharsup.c  ieee_arithmetic.F95  ieee_exceptions.F95  initpar.c  iso_c_bind.F95  mmul_real8str1.F95  stime3f.c
runtime/flangrti/: CMakeLists.txt  dumpregs.h  iostdinit.c  mpmalloc.c  trace_lin.c
runtime/flangrti/amd64-FreeBSD/: dumpregs.c  flt_env.c  x86_daz.c  x86_flushz.c
runtime/flangrti/x86_64-Linux/: dumpregs.c
runtime/include/: mthdecls.h
runtime/libpgmath/: CMakeLists.txt
runtime/libpgmath/lib/: CMakeLists.txt
runtime/libpgmath/lib/aarch64/atan/: gdatan2.c
runtime/libpgmath/lib/aarch64/cosh/: gdcosh2.c  gscosh4.c
runtime/libpgmath/lib/aarch64/log10/: gdlog102.c  gslog104.c
runtime/libpgmath/lib/aarch64/mod/: gmod_128.c
runtime/libpgmath/lib/aarch64/sin/: gdsin2.c  gssin4.c
runtime/libpgmath/lib/aarch64/sinh/: gdsinh2.c  gssinh4.c
runtime/libpgmath/lib/aarch64/tan/: gdtan2.c  gstan4.c
runtime/libpgmath/lib/aarch64/tanh/: gdtanh2.c  gstanh4.c
runtime/libpgmath/lib/amd64/: CMakeLists.txt  directives.h  mthdecls.h
runtime/libpgmath/lib/amd64-FreeBSD/: CMakeLists.txt  directives.h  libm_inlines_amd.h
runtime/libpgmath/lib/amd64-FreeBSD/fast/: CMakeLists.txt
runtime/libpgmath/lib/amd64/fast/: CMakeLists.txt
runtime/libpgmath/lib/amd64/math_tables/: mth_acosdefs.h  mth_asindefs.h  mth_atandefs.h  mth_cosdefs.h  mth_coshdefs.h  mth_expdefs.h  mth_logdefs.h  mth_powdefs.h  mth_sindefs.h  mth_sinhdefs.h  mth_sqrtdefs.h  mth_tandefs.h  mth_tanhdefs.h
runtime/libpgmath/lib/common/: CMakeLists.txt  amod.c  arm64intrin.h  cdexp.c  dispatch.c  dmod.c  mth_128defs_init.c  mth_128defs_stats.c  mth_256defs_stats.c  mth_tbldefs.h  mth_vreturns.c  mthdecls.h  p_dpowi.c  pgstdinit.h  xmm2altivec.h
runtime/libpgmath/lib/common/acos/fma3/: CMakeLists.txt  sdacos.cpp  ssacos.cpp  vdacos2.cpp  vdacos4.cpp  vdacos8.cpp  vsacos16.cpp  vsacos4.cpp  vsacos8.cpp
runtime/libpgmath/lib/common/asin/fma3/: CMakeLists.txt  sdasin.cpp  ssasin.cpp  vdasin2.cpp  vdasin4.cpp  vdasin8.cpp  vsasin16.cpp  vsasin4.cpp  vsasin8.cpp
runtime/libpgmath/lib/common/cos/: CMakeLists.txt
runtime/libpgmath/lib/common/exp/: gdexp2.c  gsexp4.c
runtime/libpgmath/lib/common/exp/fma3/: CMakeLists.txt  sdexp.cpp  vdexp2.cpp  vdexp4.cpp  vdexp8.cpp  vsexp16.cpp  vsexp4.cpp  vsexp8.cpp
runtime/libpgmath/lib/common/log/: gdlog2.c  gslog4.c
runtime/libpgmath/lib/common/log/fma3/: CMakeLists.txt  fdlog1.cpp  fdlog2.cpp  fdlog4.cpp  fdlog8.cpp  fslog16.cpp  fslog4.cpp  fslog8.cpp  rslog1.cpp  rslog16.cpp  rslog4.cpp  rslog8.cpp
runtime/libpgmath/lib/common/pow/: gdpow2.c  gspow4.c
runtime/libpgmath/lib/common/pow/fma3/: CMakeLists.txt  sdpow.cpp  sspow.cpp  vdpow2.cpp  vdpow4.cpp  vdpow8.cpp  vspow16.cpp  vspow4.cpp  vspow8.cpp
runtime/libpgmath/lib/common/powi/: CMakeLists.txt  gdpowi2.c  gspowi4.c
runtime/libpgmath/lib/common/sin/: CMakeLists.txt
runtime/libpgmath/lib/common/sincos/: CMakeLists.txt  gsincos.c  gsincos.cpp
runtime/libpgmath/lib/generic/: CMakeLists.txt
runtime/libpgmath/lib/x86_64/: libm_inlines_amd.h
runtime/libpgmath/test/: CMakeLists.txt  lit.cfg
runtime/libpgmath/tools/: arch.c  mth_mask.awk  tmp-mth_statsdefs_amd64.sh
tools/flang1/flang1exe/: main.c
tools/flang2/: CMakeLists.txt
tools/flang2/flang2exe/: CMakeLists.txt  bihutil.cpp  iliutil.c  iliutil.cpp
tools/flang2/include/: platform.h.in
tools/flang2/utils/: CMakeLists.txt
tools/flang2/utils/ilitp/: CMakeLists.txt
